--- a/css/desktop.css
+++ b/css/desktop.css
@@ -61,6 +61,13 @@
   #contact-details>.drawer {
     width: max-content;
     gap: calc(var(--space-3px) * 9);
+    padding: calc(var(--space-5px) * 3);
+  }
+
+  #contact-details>.drawer>a,
+  #contact-details>.drawer>a>img {
+    width: calc(var(--space-2px) * 16);
+    height: calc(var(--space-2px) * 16);
   }
 
   #about {
