--- a/index.css
+++ b/index.css
@@ -201,7 +201,7 @@ main {
   box-shadow: 0 calc(var(--space-2px) * 2) calc(var(--space-3px) * 2) var(--color-secondary-shadow-1), 0 var(--space-1px) var(--space-3px) var(--color-secondary-shadow-2);
   border-radius: calc(var(--space-5px) * 2);
   background-color: var(--color-primary);
-  padding: calc(var(--space-5px) * 4) calc(var(--space-5px) * 2);
+  padding: calc(var(--space-5px) * 3);
 }
 
 #contact-details>.drawer>a {
