--- a/css/desktop.css
+++ b/css/desktop.css
@@ -9,7 +9,7 @@
     padding: 0;
   }
 
-  header>nav>ul li:has(.theme-changer) {
+  .header-item-right-align {
     margin: 0;
   }
 
@@ -37,7 +37,7 @@
     font: var(--font-sf-pro-text-small);
   }
 
-  a[data-is-clickable-in-background="false"] {
+  a[data-is-clickable="false"] {
     pointer-events: auto;
   }
 
@@ -65,7 +65,7 @@
   #contact-details>.drawer {
     width: max-content;
     gap: calc(var(--space-3px) * 9);
-    padding: calc(var(--space-5px) * 3);
+    padding: calc(var(--space-5px) * 2) calc(var(--space-5px) * 3);
   }
 
   #contact-details>.drawer>a {
