--- a/css/theme.css
+++ b/css/theme.css
@@ -6,7 +6,7 @@
 
 .light {
   /* light theme */
-  --color-primary: rgba(255, 255, 255, .8);
+  --color-primary: rgba(245, 245, 247, .8);
   --color-primary-shade: rgba(245, 245, 247, 1);
   --color-primary-tint: rgba(255, 255, 255, 1);
 
@@ -15,6 +15,7 @@
   --color-secondary-tint: rgba(0, 0, 0, .54);
   --color-secondary-shadow-1: rgba(0, 0, 0, 0.1);
   --color-secondary-shadow-2: rgba(0, 0, 0, 0.08);
+  /* #fafafc */
 }
 
 .dark {
