--- a/css/theme.css
+++ b/css/theme.css
@@ -1,7 +1,7 @@
 * {
   pointer-events: none;
   box-sizing: border-box;
-  transition: color .05s cubic-bezier(.4, 0, .6, 1), background-color .32s cubic-bezier(.4, 0, .6, 1), opacity .24s cubic-bezier(.4, 0, .6, 1) 80ms, visibility .24s step-start 80ms;
+  transition: color .05s cubic-bezier(.4, 0, .6, 1), background-color .32s cubic-bezier(.4, 0, .6, 1), opacity .24s cubic-bezier(.4, 0, .6, 1) 80ms, visibility .24s step-start 80ms, transform .24s cubic-bezier(.4, 0, .6, 1) 80ms;
 }
 
 .light {
