--- a/index.css
+++ b/index.css
@@ -165,7 +165,7 @@ main {
   padding: 0 calc(var(--space-2px) * 8);
 }
 
-section {
+main>section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -174,8 +174,12 @@ section {
   padding-top: var(--header-height);
 }
 
-section>section {
+main>section>section {
   width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
+  gap: 10%;
 }
 
 #home {
@@ -190,8 +194,8 @@ section>section {
   margin-left: var(--space-2px);
   margin-top: calc(var(--space-5px) * -2);
   font-size: calc(var(--space-5px) * 2);
-  padding-bottom: var(--space-2px);
-  padding-top: calc(var(--space-3px) * 3);
+  padding-bottom: 0;
+  padding-top: calc(var(--space-5px) * 2);
   border: calc(var(--space-3px) * 2) solid var(--color-secondary);
   border-bottom: 0;
 }
@@ -218,7 +222,7 @@ section>section {
   align-items: center;
   backdrop-filter: var(--header-backdrop-filter);
   box-shadow: 0 calc(var(--space-2px) * 2) calc(var(--space-3px) * 2) var(--color-secondary-shadow-1), 0 var(--space-1px) var(--space-3px) var(--color-secondary-shadow-2);
-  border-radius: calc(var(--space-5px) * 2);
+  border-radius: var(--border-radius-medium);
   background-color: var(--color-primary);
   padding: calc(var(--space-5px) * 3);
 }
@@ -235,17 +239,12 @@ section>section {
   height: calc(var(--space-3px) * 16);
 }
 
-.dark #contact-details>.drawer>a[data-is-filter-invert-needed="true"] {
-  filter: invert(1);
-}
-
 .mail {
   background-position: -89px -88px;
 }
 
 .whatsapp {
   background-position: -167px -11px;
-  transform: scale(1.1);
 }
 
 .linkedin {
@@ -258,13 +257,45 @@ section>section {
 
 .twitter {
   background-position: -20px -88px;
+  transform: scale(0.9);
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: var(--header-height);
+}
+
+.card {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  margin-bottom: calc(var(--space-5px) * 4);
+}
+
+.card picture>img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: var(--border-radius-medium);
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: calc(var(--space-5px) * 3);
+}
+
+.card-content > h3 {
+  margin: 0;
 }
 
 footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  font: var(--font-sf-pro-text-small);
+  font: var(--font-sf-pro-text-xs);
   color: var(--color-secondary-tint);
   background-color: var(--color-primary-shade);
 }
