--- a/css/components.css
+++ b/css/components.css
@@ -20,6 +20,8 @@
 
 .h3 {
   font: var(--font-sf-pro-display-medium);
+  margin-bottom: 2px;
+  margin-top: 8px;
   letter-spacing: var(--letter-spacing-011-em);
 }
 
